--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "packageManager": "pnpm@8.14.1",
   "scripts": {
-    "build": "node build.mjs",
+    "build": "tsc",
     "start": "node dist/index.js",
     "test": "tsc --noEmit && biome check .",
     "lint": "biome lint .",
@@ -16,13 +16,15 @@
     "fix": "biome check . --apply",
     "postinstall": "husky install"
   },
+  "publishConfig": {
+    "@imlvna:registry": "https://npm.pkg.github.com"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@biomejs/biome": "^1.5.1",
     "@types/node": "^20.10.8",
-    "esbuild": "^0.19.11",
     "husky": "^8.0.3",
     "typescript": "^5.3.3"
   }
